--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love helping people learn &amp; perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some project highlights. Thanks for looking and feel free to <a href="mailto:mattscaggs@gmail.com">ping</a>.<br>
+        <strong>I love helping people learn &amp; perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some project highlights. Thanks for looking and feel free to <a href="mailto:mattscaggs@gmail.com">get in touch</a>.<br>
       </div>
 
       <div class="content">
@@ -59,6 +59,13 @@
             <p>Led a team in designing the first paperless classroom training for the org.</p>
           </li>
 
+          <li>
+            <a href="project-4gSpeed.html"><img src="img/4gSpeed_200.jpg"></a>
+            <a href="project-4gSpeed.html">4G Speedway</a>
+            <p>Led the L&amp;D effort to introduce 4G technology to AT&amp;T's retail sales team.</p>
+          </li>
+          
+          
         </ul>
     </div>
 
