--- a/project-4gSpeed.html
+++ b/project-4gSpeed.html
@@ -33,7 +33,8 @@
         In 2011, I led learning and development efforts to introduce 4G technology to AT&amp;T's retail sales team. Depending on their location, learners participated in person at event spaces, on live virtual sessions, or remotely via recorded or web-based versions.
       </div>
       <div class="content">
-        <p>Client feedback from <a href="http://www.linkedin.com/in/stevemanenti">Steve Manenti, Marketing Director</a>, "You were amazing to partner with on the 4G project. Thanks a million for all that you've done. We officially (and formally) trained 25K internal and another 4K external employees on our message - with an average knowledge test score of 94% I might add - and the feedback we've received on the course content, layout, design, timing, etc. was the best we've ever received (on this end anyway). Couldn't have done it without you. Regardless of whether people attended the live event, the live webinar, the recorded session or even the WBT, the feedback was the best I've seen." </p>
+        <p>Client feedback from <a href="http://www.linkedin.com/in/stevemanenti">Steve Manenti, Marketing Director</a>:</p>
+        <p><i>"You were amazing to partner with on the 4G project. Thanks a million for all that you've done. We officially (and formally) trained 25K internal and another 4K external employees on our message - with an average knowledge test score of 94% I might add - and the feedback we've received on the course content, layout, design, timing, etc. was the best we've ever received (on this end anyway). Couldn't have done it without you. Regardless of whether people attended the live event, the live webinar, the recorded session or even the WBT, the feedback was the best I've seen."</i></p>
         <p>Deliverables included:<br>
         	- Program messaging monobrief<br>
         	- Instructor guide, drafted in Word with DocuTools<br>
@@ -41,7 +42,7 @@
         	- Recorded session, developed with Presenter &amp; Audacity<br>
         	- eLearning course, developed with Lectora, Illustrator &amp; Photoshop<br>
         </p><br>
-        <img class="img-responsive" src="img/tbd.jpg"><br>
+        <img class="img-responsive" src="img/4gSpeed.jpg"><br>
       </div>
     </div>
     <footer>
