--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li>
             <a href="project-strategy.html"><img src="img/enjoyLogo.png"></a>
             <a href="project-strategy.html">Training Strategy</a>
-            <p>Partnered with Enjoy on the approach for onboarding and continuation training for their employeees.</p>
+            <p>Partnered with Enjoy on the approach for onboarding and continuation training for their employees.</p>
           </li>
 
           <li>
