--- a/project-ops.html
+++ b/project-ops.html
@@ -23,12 +23,12 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="http://mattscaggs.github.io/"><img src="img/profilepic.jpg"></a>
       <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions<br></div>  
+      <div class="nav"><a href="http://mattscaggs.github.io/">Home</a> > Offering Personalized Solutions<br></div>  
       <div class="hero">
         In 2012, I led a team in designing and developing the first paperless leader led course at AT&amp;T, delivered to 40K+ frontline retail employees.
       </div>
