--- a/project-4gSpeed.html
+++ b/project-4gSpeed.html
@@ -23,12 +23,12 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>                                  
+      <a href="http://mattscaggs.github.io/"><img src="img/profilepic.jpg"></a>                                  
       <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > 4G Speedway<br></div>  
+      <div class="nav"><a href="http://mattscaggs.github.io/">Home</a> > 4G Speedway<br></div>  
       <div class="hero">
         In 2011, I led learning and development efforts to introduce 4G technology to AT&amp;T's retail sales team. Depending on their location, learners participated in person at event spaces, on live virtual sessions, or remotely via recorded or web-based versions.
       </div>
