--- a/project-devsppt.html
+++ b/project-devsppt.html
@@ -23,12 +23,12 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>                                  
+      <a href="http://mattscaggs.github.io/"><img src="img/profilepic.jpg"></a>                                  
       <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Device Support<br></div>  
+      <div class="nav"><a href="http://mattscaggs.github.io/">Home</a> > Device Support<br></div>  
       <div class="hero">
         Since 2016, I've worked as an ecommerce product manager in the online support space, primarily focused on helping customers learn how to use their latest mobile device.
       </div>
