--- a/project-ilt.html
+++ b/project-ilt.html
@@ -23,12 +23,12 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>                                  
+      <a href="http://mattscaggs.github.io/"><img src="img/profilepic.jpg"></a>                                  
       <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Instructor Led<br></div>  
+      <div class="nav"><a href="http://mattscaggs.github.io/">Home</a> > Instructor Led<br></div>  
       <div class="hero">
         In 2015, I led efforts to update the overall new hire program for retail sellers, a multi-week blended program of instructor led and self-paced materials.
       </div>
