--- a/project-strategy.html
+++ b/project-strategy.html
@@ -23,12 +23,12 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="http://mattscaggs.github.io/"><img src="img/profilepic.jpg"></a>
       <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
 
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Training Strategy<br></div>      
+      <div class="nav"><a href="http://mattscaggs.github.io/">Home</a> > Training Strategy<br></div>      
       <div class="hero">
         In late 2014 &amp early 2015, I partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the initial strategy for onboarding and continuation training to support their launch as a start-up.
       </div>
