--- a/project-wbts.html
+++ b/project-wbts.html
@@ -23,12 +23,12 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="http://mattscaggs.github.io/"><img src="img/profilepic.jpg"></a>
       <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
 
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > eLearning<br></div>  
+      <div class="nav"><a href="http://mattscaggs.github.io/">Home</a> > eLearning<br></div>  
       <div class="hero">
       	From 2009 to 2015, I worked on a number of eLearning and mLearning courses. Many of these self-paced courses focused on introducing new products to 40K+ retail employees via multiple platforms.
       </div>
