--- a/project-wbts.html
+++ b/project-wbts.html
@@ -35,7 +35,7 @@
 
       <div class="content">
         <p>My audience was sales consultants, support reps, and line managers from internal and external retail channels. Courses were designed and developed in partnership with stakeholders from the field, marketing, sales operations, and OEMs.</p>
-        <p>Want to check out an example course? <a href="wearables/index.html">Here's a course on wearables</a>, designed with InDesign and developed in Lectora for employees to access from their tablets or PCs.</p>
+        <p>Want to check out an example course? <a href="wearables/index.html" target="new">Here's a course on wearables</a>, designed with InDesign and developed in Lectora for employees to access from their tablets or PCs.</p>
         <img class="img-responsive" src="img/wbtGroup.jpg">
       </div>
 
